--- a/kc/shared_home/log4j_kc.properties
+++ b/kc/shared_home/log4j_kc.properties
@@ -2,13 +2,13 @@
 log4j.rootLogger=WARN, LogFile
 
 log4j.appender.LogFile=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.LogFile.File=${catalina.home}/logs/kc_${build.environment}_${build.version}.log
+log4j.appender.LogFile.File=${catalina.home}/logs/kc.log
 log4j.appender.LogFile.layout=org.apache.log4j.PatternLayout
 log4j.appender.LogFile.layout.ConversionPattern=%d [%t] D:%X{docID} U:%X{user} [%X{clientIp}]:: %m%n
 log4j.appender.LogFile.Threshold=TRACE
 
-log4j.logger.org.kuali.rice=${logDefault}
-log4j.logger.org.kuali.kra=${logDefault}
+log4j.logger.org.kuali.rice=DEBUG
+log4j.logger.org.kuali.kra=DEBUG
 
 
 
